  the use of option `--ignore-check-rversion` any longer. A warning is
  simply issue when the R version is "development".

- On MSWindows, the dependency on `pywin32` was removed (issue #315)

- :class:`GroupedDataFrame` in the dplyr interface module is now inheriting
  from the definition of DataFrame in that same module (it was previously
  inheriting from :class:`robjects.vectors.DataFrame`).
  
Bug Fixed
---------

- Parameter names to R function that are in UTF-8 are no longer causing a
  segfault (issue #332)
  
- Looking for a missing key in an R environment (using `__getitem__` or `[`)
  could raise a `LookupError` instead of a `KeyError`.

- R environment can now handle unicode keys as UTF-8 (was previously
  trying Latin1)

- rpy2 is interrupting attempts to install with Python < 2.7 with an
  informative error message (issue #338)

- Setting the R class can be done by using a simple Python string (issue #341)

- `rpy2.robjects.lib.grid.viewport` is now returning an instance of class
  `Viewport` (defined in the same module) (issue #350)
  

Release 2.7.9
=============

Bug fixed
---------

- Python objects exposed to R could lead to segfault when the Python process is
  exiting (issue #331)


Release 2.7.8
=============

Bugs fixed
----------

- American English spelling was missing for some of the function names
  to specify colour (color) scales.
  
- Fix for printing R objects on Windows (pull request #47)


Release 2.7.7
=============

Bugs fixed
----------

- Pickling `robjects`-level objects resulted in `rinterface`-level objects
  when unpickled (issue #324).


Release 2.7.6
=============
 
Changes
-------

- :mod:`rpy2.robjects.lib.ggplot2` was modified to match the newly released
  ggplot2-2.0.0. This is introducing API-breaking changes, which breaks the
  promise to keep the API stable through bugfix releases within series, but
  without it 2.7.x will not a work with new default installation of the R
  package ggplot2.


Release 2.7.5